Finsihed Sprint 2 with loading and admin pages

--- a/HTML/StudentSignIn/studentProfileCreated.html
+++ b/HTML/StudentSignIn/studentProfileCreated.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="..\css\header.css">
-        <link rel="stylesheet" href="..\css\createProfile.css">
-        <script src="..\..\javascript\createProfile.js" defer></script>
-        <script src="..\..\javascript\studentSignOn.js" defer></script>
+        <link rel="stylesheet" href="../../css/header.css">
+        <link rel="stylesheet" href="../../css/createProfile.css">
+        <script src="../../JavaScript/createProfile.js" defer></script>
+        <script src="../../JavaScript/studentSignOn.js" defer></script>
     </head>
-    <iframe scrolling="no" style="border:none;" width="100%" src="header.html"></iframe>
+    <iframe scrolling="no" style="border:none;" width="100%" src="../header.html"></iframe>
     <body>
         <div id="createSuccess">
             Profile Created!
