--- a/HTML/admin/index.html
+++ b/HTML/admin/index.html
@@ -7,6 +7,9 @@
 
 <body>
     <div class="container">
+        <div class="logo-container">
+            <img src="../../Img/logo.svg" class="logo" alt="Logo">
+        </div>
         <div class="title">The College of St. Scholastica</div>
         <div class="subtitle">Game Theory<br>Simulations</div>
         <a class="button" href="../StudentSignIn/studentSignOn.html">Start</a>
