--- a/HTML/header.html
+++ b/HTML/header.html
@@ -1,17 +1,27 @@
-<link rel="stylesheet" href="..\css\header.css">
-<div id="headerTop"></div>
-<img src = "..\img\logo.svg" id="logo">
-<div id="headerLeft"></div>
-<!---add other stuff here---->
+<!DOCTYPE html>
+<html>
 
-<!--Comment from Chris-->
-<div id="linkRow">
-    <table>
-        <tr>
-            <td class="links">
-                Game Theory
-            </td>
-        </tr>
-    </table>
-</div>
-<div id="headerBottom"></div>
+<head>
+    <link rel="stylesheet" href="..\css\header.css">
+</head>
+
+<body>
+    <div id="headerTop"></div>
+    <img src="..\img\logo.svg" id="logo">
+    <div id="headerLeft"></div>
+    <!---add other stuff here---->
+
+    
+    <div id="linkRow">
+        <table>
+            <tr>
+                <td class="links">
+                    <a href="../HTML/admin/index.html" target="_blank">Game Theory</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div id="headerBottom"></div>
+</body>
+
+</html>
