--- a/HTML/StudentSignIn/studentCreateProfile.html
+++ b/HTML/StudentSignIn/studentCreateProfile.html
@@ -32,7 +32,7 @@ CreateAProfile
             return true;
         }
     </script>
-    
+<!-- This post action is crashing on live server, but working whrn copying path -->
 </head>
 <body>
     <div id="createProfile" style="width: 100%; height: 100%; position: relative">
