--- a/HTML/admin/teacherSelectGame.html
+++ b/HTML/admin/teacherSelectGame.html
@@ -9,19 +9,17 @@
     <iframe scrolling="no" style="border:none; height: 100px; width: 100%;" src="..\header.html"></iframe>
     <div style="width: 100%; height: 100%; position: relative; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="select-game">Select Game</div>
-        <div class="box-container">
-            <div class="box">
-                <div class="red-card">Red Card</div>
-                <div class="black-card">Black Card</div>
-            </div>
-            <div class="box">
-                <div class="wheat">Wheat</div>
-                <div class="and-symbol">&</div>
-                <div class="steel">Steel</div>
-            </div>
+        <div class="button-container">
+            <button class="game-button blue-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">Red Card Black Card</button>
+            <button class="game-button gold-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">Wheat and Steel</button>
         </div>
-
     </div>
+
+    <script>
+        function redirectToLoading(path) {
+            window.location.href = path;
+        }
+    </script>
 </body>
 
 </html>
