--- a/HTML/admin/allGames.html
+++ b/HTML/admin/allGames.html
@@ -79,8 +79,7 @@
             </table>
         </div>
         <br>
-        <!--table w/ links-->
-        <!-- TODO: consider making row of links an admin footer -->
+        <!--table w/ links; links get weird with iframes, so a footer isn't optimal right now-->
         <table id="links">
             <tr>
                 <td>
