--- a/HTML/header.html
+++ b/HTML/header.html
@@ -9,13 +9,7 @@
     <table>
         <tr>
             <td class="links">
-                <a href="index.html">Home</a>
-            </td>
-            <td class="links">
-                <a href="index.html">Create New Session</a>
-            </td>
-            <td class="links">
-                <a href="index.html">Sign Out</a>
+                Game Theory
             </td>
         </tr>
     </table>
