added content to landingPage.html

--- a/HTML/StudentSignIn/landingPage.html
+++ b/HTML/StudentSignIn/landingPage.html
@@ -5,9 +5,12 @@
         <script src="..\..\javascript\createGame.js" defer></script> <!---makes sure the values are in localStorage--->
     <iframe scrolling="no" style="border:none;" width="100%" src="..\..\HTML\header.html"></iframe>
     <body>
-        <h1 id="gameHeader">{Game Name}</h1>
-        <h2 id="gameName">Landing Page</h2>
-
-        <!--- transfer content from Figma --->
+        <h1 id="gameName">{Game Name}</h1>
+        <br> <br>
+        <p id="connectionStatusLabel">
+            Connection Status:
+            <br> <br>
+            <span id="connectionStatus">Success!</span>
+        </p>
     </body>
 </html>
