--- a/HTML/admin/indexPart2.html
+++ b/HTML/admin/indexPart2.html
@@ -12,7 +12,8 @@
         </div>
         <div class="title">The College of St. Scholastica</div>
         <div class="subtitle">Game Theory<br>Simulations</div>
-        <a class="button" href="indexPart2.html">Start</a>
+        <a class="button" href="../StudentSignIn/studentSignOn.html">Student</a>
+        <a class="button" href="../TeacherSignInFolder/teacherSignOn.html">Teacher</a>
     </div>
 </body>
 
