added images, and adjusted other stuff

--- a/HTML/admin/teacherSelectGame.html
+++ b/HTML/admin/teacherSelectGame.html
@@ -10,9 +10,10 @@
     <div style="width: 100%; height: 100%; position: relative; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="select-game">Select Game</div>
         <div class="button-container">
-            <button class="game-button blue-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">Red Card Black Card</button>
-            <button class="game-button gold-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">Wheat and Steel</button>
+            <img src="../../Img/RedCardBlackCard.jpeg" alt="Red Card Black Card" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+            <img src="../../Img/WheatAndSteel.jpeg" alt="Wheat and Steel" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
         </div>
+        
     </div>
 
     <script>
