--- a/HTML/admin/teacherSelectGame.html
+++ b/HTML/admin/teacherSelectGame.html
@@ -10,17 +10,17 @@
     <div style="width: 100%; height: 100%; position: relative; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="select-game">Select Game</div>
         <div class="button-container">
-            <img src="../../Img/RedCardBlackCard.jpeg" alt="Red Card Black Card" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
-            <img src="../../Img/WheatAndSteel.jpeg" alt="Wheat and Steel" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+            <div class="game-wrapper">
+                <img src="../../Img/RedCardBlackCard.jpeg" alt="Red Card Black Card" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+                <h3>Red Card Black Card</h3>
+            </div>
+            <div class="game-wrapper">
+                <img src="../../Img/WheatAndSteel.jpeg" alt="Wheat and Steel" class="game-button" onclick="redirectToLoading('..\\StudentSignIn\\gameLoading.html')">
+                <h3>Wheat And Steal</h3>
+            </div>
         </div>
-        
     </div>
-
-    <script>
-        function redirectToLoading(path) {
-            window.location.href = path;
-        }
-    </script>
 </body>
+
 
 </html>
