--- a/HTML/TeacherSignInFolder/teacherSignOn.html
+++ b/HTML/TeacherSignInFolder/teacherSignOn.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="logo"></div>
         <h2>The College of St. Scholastica</h2>
-        <form class="form" method="GET" action="../admin/teacherSelectGame.html">
+        <form class="form" method="POST" action="../admin/teacherSelectGame.html">
             <div class="input-container">
                 <input name="Email" id="Email" required placeholder="Email">
             </div>
