Fixed something that I broke by acciden

--- a/HTML/admin/teacherSelectGame.html
+++ b/HTML/admin/teacherSelectGame.html
@@ -3,6 +3,12 @@
 
 <head>
     <link rel="stylesheet" href="../../css/teacherGameSelect.css">
+    <script>
+        function redirectToLoading(url) {
+    window.location.href = url;
+}
+
+    </script>
 </head>
 
 <body style="overflow: hidden;">
