--- a/HTML/StudentSignIn/studentEnterCode.html
+++ b/HTML/StudentSignIn/studentEnterCode.html
@@ -15,6 +15,8 @@
                 <br> <br>
                 <input id="codeSubmit" type="submit" value="Submit">
             </form>
+            <br>
+            <p>You are logged in.</p>
         </div>
     </body>
 </html>
